--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </a>
             </div>
         </nav>
-        <h1 class="front-page-my-name">[TATIANA FEDORINA] </h1>
+        <h1 class="front-page-my-name">[TATIANA] </h1>
         <h2 class="front-page-profession">{Frontend}</h2>
         <h2 class="front-page-profession">_DEVELOPER</h2>
         <p class="front-page-description">/ Using HTML, CSS, JavaScript, React Native and Node.js I help to build
@@ -49,6 +49,7 @@
             <div class="experience-skill">
                 <div class="experience-dots">
                     <i сlass="experience-dots-item experience-dots-item-accent far fa-circle"></i>
+                    <i class="experience-dots-item experience-dots-item-accent far fa-circle"></i>
                     <i class="experience-dots-item experience-dots-item-accent far fa-circle"></i>
                     <i class="experience-dots-item experience-dots-item-accent far fa-circle"></i>
                     <i class="experience-dots-item experience-dots-item-accent far fa-circle"></i>
