--- a/index.html
+++ b/index.html
@@ -256,6 +256,19 @@
             </div>
         </div>
     </section>
+
+    <section class="callback-form">
+        <div class="container">
+            <form action="" class="callback-form-container">
+                <h3 class="callback-form-title">/Are you minding [a project?]</h3>
+                <p class="callback-form-descr">Leave a request to discuss the task and technical requirements</p>
+                <input type="text" class="callback-form-input" placeholder="Name">
+                <input type="email" class="callback-form-input" placeholder="Email">
+                <input type="tel" class="callback-form-input" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Phone">
+                <input type="submit" class="accent-btn" value="Discuss the project  —" >
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
