--- a/index.html
+++ b/index.html
@@ -343,7 +343,30 @@
 
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <h3 class="footer-my-name">Tatiana Fedorina</h3>
+            <p class="footer-my-profesion">Frontend Developer</p>
+            <a href="tel:+38 (050) 505 05 05" class="footer-my-tel">+38 (050) 505 05 05</a>
+            <a href="mailto:alexturdev@gmail.com" class="footer-my-mail">alexturdev@gmail.com</a>
+            <div class="social-links">
+                <a href="https://github.com/TanyFV" class="social-links-item">
+                    <i class="fab fa-github social-links-item"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/tatiana-fedorina-410a561b9/" class="social-links-item">
+                    <i class="fab fa-linkedin-in social-links-item"></i>
+                </a>
+                <a href="https://www.facebook.com/tatyana.fedorina/" class="social-links-item">
+                    <i class="fab fa-facebook social-links-item"></i>
+                </a>
+                <a href="https://www.instagram.com/harukainlove/" class="social-links-item">
+                    <i class="fab fa-instagram social-links-item"></i>
+                </a>
 
+            </div>
+
+        </div>
+    </footer>
 
 </body>
 
