--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <h3 class="footer-my-name">Tatiana Fedorina</h3>
             <p class="footer-my-profesion">Frontend Developer</p>
             <a href="tel:+38 (050) 505 05 05" class="footer-my-tel">+38 (050) 505 05 05</a>
-            <a href="mailto:alexturdev@gmail.com" class="footer-my-mail">alexturdev@gmail.com</a>
+            <a href="mailto:tatiana.fedorina.mail@gmail.com" class="footer-my-mail">alexturdev@gmail.com</a>
             <div class="social-links">
                 <a href="https://github.com/TanyFV" class="social-links-item">
                     <i class="fab fa-github social-links-item"></i>
