--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="choices.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -343,6 +344,7 @@
 
         </div>
     </section>
+    <!--Footer-->
     <footer class="footer">
         <div class="container">
             <h3 class="footer-my-name">Tatiana Fedorina</h3>
@@ -367,7 +369,7 @@
 
         </div>
     </footer>
-
+    <script src="js/choices.min.js"></script>
 </body>
 
 </html>
