--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <style>
+        .modal {
+            display: none;
+        }
+    </style>
+
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/choices.min.css">
@@ -373,6 +379,35 @@
 
         </div>
     </footer>
+    <!--Modals-->
+    <div class="modals-wrapper">
+        <!--MoBILE MENU -->
+        <div class="modal modal-mobile-menu">
+            <div class="modal-mobile-content">
+                <div class="container mobile-menu-container">
+                    <i class="fas fa-times modal-close-btn mobile-menu-close-btn"></i>
+                    <nav class="mobile-menu-items">
+                        <a href="#about" class="mobile-menu-item">ABOUT</a>
+                        <a href="#projects" class="mobile-menu-item">PROJECTS</a>
+                        <a href="#calculator" class="mobile-menu-item">COST CALCULATOR</a>
+                        <a href="#contacts" class="mobile-menu-item">CONTACTS</a>
+                    </nav>
+                    <div class="mobile-menu-contacts">
+                        <a href="tel:+38 (050) 505 05 05" class="mobile-menu-my-tel">+38 (050) 505 05 05</a>
+                        <a href="mailto:tatiana.fedorina.mail@gmail.com"
+                            class="mobile-menu-my-mail">tatiana.fedorina.mail@gmail.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--VIDEO -->
+        <div class="modal modal-active">
+            <div class="my-video-container">
+                <i class="fas fa-times modal-close-btn my-video-close-btn"></i>
+                <video class="my-video-content" src="video.mp4" controls></video>
+            </div>
+        </div>
+    </div>
     <script src="js/choices.min.js"></script>
     <script src="js/calculator.js"></script>
 </body>
