--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="img/goit-logo.svg" alt="GOITLOGO"></a>
             <div class="navigation-part">
                 <a href="" class="hire-me-btn">- HIRE ME</a>
-                <a href="" class="mobile-menu">
+                <a href="" class="mobile-menu" id="mobile-menu-btn">
                     <i class="fas fa-bars"></i>
                 </a>
             </div>
@@ -44,7 +44,7 @@
 
         <p class="front-page-my-decr">About me in 2 minutes</p>
 
-        <button class="front-page-my-video-btn">
+        <button class="front-page-my-video-btn" id="my-video-btn">
             <i class="fas fa-play"></i>
             PLAY
         </button>
@@ -382,7 +382,7 @@
     <!--Modals-->
     <div class="modals-wrapper">
         <!--MoBILE MENU -->
-        <div class="modal modal-mobile-menu">
+        <div class="modal modal-mobile-menu" id="mobile-menu">
             <div class="modal-mobile-content">
                 <div class="container mobile-menu-container">
                     <i class="fas fa-times modal-close-btn mobile-menu-close-btn"></i>
@@ -401,15 +401,16 @@
             </div>
         </div>
         <!--VIDEO -->
-        <div class="modal modal-active">
+        <div class="modal modal-area-bgd" id="my-video-modal">
             <div class="my-video-container">
                 <i class="fas fa-times modal-close-btn my-video-close-btn"></i>
-                <video class="my-video-content" src="video.mp4" controls></video>
+                <video class="my-video-content modal-area-content" src="video.mp4" controls></video>
             </div>
         </div>
     </div>
     <script src="js/choices.min.js"></script>
     <script src="js/calculator.js"></script>
+    <script src="js/modals.js"></script>
 </body>
 
 </html>
