--- a/index.html
+++ b/index.html
@@ -407,6 +407,16 @@
                 <video class="my-video-content modal-area-content" src="video.mp4" controls></video>
             </div>
         </div>
+
+         <!--REQUEST-->
+         <div class="modal modal-area-bgd modal-request-received" id="request-received">
+            <div class="request-received-container">
+                <i class="fas fa-times modal-close-btn "></i>
+                <h3 class="request-received-title">{Thanks}</h3>
+                <p class="request-received-primery-msg">I've received your request/</p>
+                <p lass="request-received-secondary-msg">I will contact you soon =)</p>
+            </div>
+        </div>
     </div>
     <script src="js/choices.min.js"></script>
     <script src="js/calculator.js"></script>
