add script to projects  button

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <i class="fas fa-laptop-code personal-project-icon"></i>
                     <span>Technology: HTML5, CSS3, JS</span>
                 </p>
-                <button class="personal-project-btn accent-btn">More details —</button>
+                <button class="personal-project-btn accent-btn" id="personal-project-full-stack-btn">More details —</button>
             </div>
 
             <div class="personal-project-item">
@@ -188,7 +188,9 @@
                     <i class="fas fa-laptop-code personal-project-icon"></i>
                     <span>Technology: HTML, CSS, JavaScript, PHP</span>
                 </p>
-                <button class="personal-project-btn accent-btn">More details —</button>
+                <button class="personal-project-btn accent-btn" id="personal-project-wedding-project-btn">
+                    More details —
+                </button>
             </div>
 
             <div class="personal-project-item">
@@ -204,7 +206,7 @@
                     <i class="fas fa-laptop-code personal-project-icon"></i>
                     <span>Technology: React.js, Node.js</span>
                 </p>
-                <button class="personal-project-btn accent-btn">More details —</button>
+                <button class="personal-project-btn accent-btn" id="personal-project-pro-test-btn">More details —</button>
             </div>
 
             <div class="personal-project-item">
@@ -220,7 +222,7 @@
                     <i class="fas fa-laptop-code personal-project-icon"></i>
                     <span>Technology: HTML, CSS, JavaScript, Wordpress</span>
                 </p>
-                <button class="personal-project-btn accent-btn">More details —</button>
+                <button class="personal-project-btn accent-btn" id="personal-project-goit-btn">More details —</button>
             </div>
         </div>
     </section>
@@ -244,7 +246,7 @@
                     <i class="fas fa-laptop-code personal-project-icon"></i>
                     Technology: React.js, Node.js
                 </p>
-                <button class="personal-project-btn accent-btn">More details —</button>
+                <button class="personal-project-btn accent-btn" id="team-project-questify-btn">More details —</button>
             </div>
             <div class="team-project-item">
                 <div class="personal-project-item-container">
@@ -259,7 +261,7 @@
                     <i class="fas fa-laptop-code personal-project-icon"></i>
                     Technology: React.js, Node.js
                 </p>
-                <button class="personal-project-btn accent-btn">More details —</button>
+                <button class="personal-project-btn accent-btn" id="team-project-it-test-btn">More details —</button>
             </div>
         </div>
     </section>
@@ -379,6 +381,7 @@
 
         </div>
     </footer>
+
     <!--Modals-->
     <div class="modals-wrapper">
         <!--MoBILE MENU -->
@@ -400,6 +403,7 @@
                 </div>
             </div>
         </div>
+
         <!--VIDEO -->
         <div class="modal modal-area-bgd" id="my-video-modal">
             <div class="my-video-container">
@@ -419,8 +423,7 @@
         </div>
 
         <!-- PERSONAL PROJECTS FULL STACK -->
-
-        <div class="modal project-modal">
+        <div class="modal project-modal" id="personal-project-full-stack">
             <div class="project-modal-container">
                 <i class="fas fa-times modal-close-btn"></i>
 
@@ -449,8 +452,7 @@
         </div>
 
         <!-- PERSONAL PROJECTS WEDDING -->
-
-        <div class="modal project-modal">
+        <div class="modal project-modal" id="personal-project-wedding-project">
             <div class="project-modal-container">
                 <i class="fas fa-times modal-close-btn"></i>
 
@@ -475,10 +477,8 @@
                 </div>
             </div>
         </div>
-
         <!-- PERSONAL PROJECTS PRO-TEST -->
-
-        <div class="modal project-modal">
+        <div class="modal project-modal" id="personal-project-pro-test">
             <div class="project-modal-container">
                 <i class="fas fa-times modal-close-btn"></i>
 
@@ -501,7 +501,7 @@
         </div>
 
         <!-- PERSONAL PROJECTS GOIT -->
-        <div class="modal project-modal">
+        <div class="modal project-modal" id="personal-project-goit">
             <div class="project-modal-container">
                 <i class="fas fa-times modal-close-btn"></i>
 
@@ -530,8 +530,9 @@
                 </div>
             </div>
         </div>
+
         <!-- TEAM PROJECTS FULL STACK -->
-        <div class="modal project-modal">
+        <div class="modal project-modal" id="team-project-questify">
             <div class="project-modal-container">
                 <i class="fas fa-times modal-close-btn"></i>
 
@@ -550,8 +551,9 @@
                 </div>
             </div>
         </div>
+
         <!-- TEAM PROJECTS TEST IT -->
-        <div class="modal project-modal">
+        <div class="modal project-modal" id="team-project-it-test">
             <div class="project-modal-container">
                 <i class="fas fa-times modal-close-btn"></i>
 
@@ -569,10 +571,10 @@
             </div>
         </div>
 
-
     </div>
     <script src="js/choices.min.js"></script>
     <script src="js/calculator.js"></script>
+    <script src="js/project-modals.js"></script>
     <script src="js/modals.js"></script>
 </body>
 
