add classes "modal-area..." to modals

--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
                     <i class="fas fa-laptop-code personal-project-icon"></i>
                     <span>Technology: HTML5, CSS3, JS</span>
                 </p>
-                <button class="personal-project-btn accent-btn" id="personal-project-full-stack-btn">More details —</button>
+                <button class="personal-project-btn accent-btn" id="personal-project-full-stack-btn">More details
+                    —</button>
             </div>
 
             <div class="personal-project-item">
@@ -206,7 +207,8 @@
                     <i class="fas fa-laptop-code personal-project-icon"></i>
                     <span>Technology: React.js, Node.js</span>
                 </p>
-                <button class="personal-project-btn accent-btn" id="personal-project-pro-test-btn">More details —</button>
+                <button class="personal-project-btn accent-btn" id="personal-project-pro-test-btn">More details
+                    —</button>
             </div>
 
             <div class="personal-project-item">
@@ -414,7 +416,7 @@
 
         <!--REQUEST-->
         <div class="modal modal-area-bgd modal-request-received" id="request-received">
-            <div class="request-received-container">
+            <div class="request-received-container modal-area-content">
                 <i class="fas fa-times modal-close-btn "></i>
                 <h3 class="request-received-title">{Thanks}</h3>
                 <p class="request-received-primery-msg">I've received your request/</p>
@@ -423,8 +425,8 @@
         </div>
 
         <!-- PERSONAL PROJECTS FULL STACK -->
-        <div class="modal project-modal" id="personal-project-full-stack">
-            <div class="project-modal-container">
+        <div class="modal project-modal modal-area-bgd" id="personal-project-full-stack">
+            <div class="project-modal-container modal-area-content">
                 <i class="fas fa-times modal-close-btn"></i>
 
                 <div class="project-modal-scrollable">
@@ -452,8 +454,8 @@
         </div>
 
         <!-- PERSONAL PROJECTS WEDDING -->
-        <div class="modal project-modal" id="personal-project-wedding-project">
-            <div class="project-modal-container">
+        <div class="modal project-modal modal-area-bgd" id="personal-project-wedding-project">
+            <div class="project-modal-container modal-area-content">
                 <i class="fas fa-times modal-close-btn"></i>
 
                 <div class="project-modal-scrollable">
@@ -478,8 +480,8 @@
             </div>
         </div>
         <!-- PERSONAL PROJECTS PRO-TEST -->
-        <div class="modal project-modal" id="personal-project-pro-test">
-            <div class="project-modal-container">
+        <div class="modal project-modal modal-area-bgd" id="personal-project-pro-test">
+            <div class="project-modal-container modal-area-content">
                 <i class="fas fa-times modal-close-btn"></i>
 
                 <div class="project-modal-scrollable">
@@ -501,8 +503,8 @@
         </div>
 
         <!-- PERSONAL PROJECTS GOIT -->
-        <div class="modal project-modal" id="personal-project-goit">
-            <div class="project-modal-container">
+        <div class="modal project-modal modal-area-bgd" id="personal-project-goit">
+            <div class="project-modal-container modal-area-content">
                 <i class="fas fa-times modal-close-btn"></i>
 
                 <div class="project-modal-scrollable">
@@ -532,8 +534,8 @@
         </div>
 
         <!-- TEAM PROJECTS FULL STACK -->
-        <div class="modal project-modal" id="team-project-questify">
-            <div class="project-modal-container">
+        <div class="modal project-modal modal-area-bgd" id="team-project-questify">
+            <div class="project-modal-container modal-area-content">
                 <i class="fas fa-times modal-close-btn"></i>
 
                 <div class="project-modal-scrollable">
@@ -553,8 +555,8 @@
         </div>
 
         <!-- TEAM PROJECTS TEST IT -->
-        <div class="modal project-modal" id="team-project-it-test">
-            <div class="project-modal-container">
+        <div class="modal project-modal modal-area-bgd" id="team-project-it-test">
+            <div class="project-modal-container modal-area-content">
                 <i class="fas fa-times modal-close-btn"></i>
 
                 <div class="project-modal-scrollable">
